# chessTerm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Chessboard.cpp  Chessboard.hpp  Misc.cpp  Misc.hpp  Screen.hpp  Session.hpp  config.h.in  main.cpp
src/boards/: Board.hpp  Chessboard.cpp  Chessboard.hpp  IBoard.hpp
src/notations/: ChessNotation.cpp  ChessNotation.hpp  INotation.hpp  Notation.hpp
tests/: CMakeLists.txt  ChessboardTest.cpp  MiscTest.cpp  NotationTest.cpp  main.cpp
